--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   deploy_dialogflow_agent:
     docker:
-      - image: circleci/node
+      - image: circleci/node:12.16.1
     working_directory: ~/repo/
     parameters:
       jsonKey:
@@ -14,7 +14,7 @@ jobs:
       - checkout
       - restore_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
-      - run: cd scripts && npm install
+      - run: cd scripts && npm ci
       - save_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
@@ -39,11 +39,6 @@ jobs:
       - image: circleci/node
     working_directory: ~/repo/
     parameters:
-      jsonKey:
-        description: "The key json object specified in the environment variables."
-        type: string # string? "${DEV_MDHS_CSA_KEY_JSON}"
-      env:
-        type: string # e.g. dev
       firebaseProjectID:
         type: string # e.g. mdhs-csa-dev, mdhs-csa-isd-273818
       googleMapsKey:
@@ -62,7 +57,7 @@ jobs:
       - checkout
       - restore_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
-      - run: cd functions && npm install
+      - run: cd functions && npm ci
       - save_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
@@ -85,9 +80,9 @@ jobs:
       - run: sudo npm install -g firebase-tools
       - run: firebase deploy -P ${<< parameters.firebaseProjectID >>} --only functions --token $FIREBASE_DEPLOY_TOKEN
 
-  deploy_hosting:
+  deploy_hosting_test_harness:
     docker:
-      - image: circleci/node
+      - image: circleci/node:12.16.1
     working_directory: ~/repo/
     parameters:
       firebaseProjectID:
@@ -100,6 +95,8 @@ jobs:
         type: string
       feedbackURL:
         type: string
+      testHarnessHostedUrl:
+        type: string
     steps:
       - checkout
       - run:
@@ -107,7 +104,7 @@ jobs:
           command: cd interface && echo "${ALL_NPM_AUTH_TOKEN}" > .npmrc
       - restore_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
-      - run: cd interface && npm install
+      - run: cd interface && npm ci
       - save_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
@@ -126,13 +123,66 @@ jobs:
       - run:
           name: "Add env variables to interface folder"
           command: cd interface && npm run build
-
       - run: sudo npm install -g firebase-tools
-      - run: firebase deploy -P ${<< parameters.firebaseProjectID >>} --only hosting --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase target:apply hosting testHarness ${<< parameters.testHarnessHostedUrl >>} -P ${<< parameters.firebaseProjectID >>} --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase deploy -P ${<< parameters.firebaseProjectID >>} --only hosting:testHarness --token $FIREBASE_DEPLOY_TOKEN
+
+  deploy_hosting_analytics:
+    docker:
+      - image: circleci/node:12.16.1
+    working_directory: ~/repo/
+    parameters:
+      firebaseProjectId:
+        type: string
+      firebaseApiKey:
+        type: string
+      firebaseAuthDomain:
+        type: string
+      firebaseDatabaseUrl:
+        type: string
+      firebaseDeployToken:
+        type: string
+      firebaseMessagingSenderId:
+        type: string
+      firebaseStorageBucket:
+        type: string
+      firebaseAppId:
+        type: string
+      downloadExportUrl:
+        type: string
+      analyticsHostedUrl:
+        type: string
+    steps:
+      - checkout
+      - restore_cache:
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+      - run: npm ci
+      - save_cache:
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - node_modules
+            - functions/node_modules
+      - run:
+          name: "Add env variables & build"
+          command: |
+            export REACT_APP_FIREBASE_API_KEY=${<< parameters.firebaseApiKey >>}
+            export REACT_APP_FIREBASE_AUTH_DOMAIN=${<< parameters.firebaseAuthDomain >>}
+            export REACT_APP_FIREBASE_DATABASE_URL=${<< parameters.firebaseDatabaseUrl >>}
+            export REACT_APP_FIREBASE_MESSAGING_SENDER_ID=${<< parameters.firebaseMessagingSenderId >>}
+            export REACT_APP_FIREBASE_PROJECT_ID=${<< parameters.firebaseProjectId >>}
+            export REACT_APP_FIREBASE_STORAGE_BUCKET=${<< parameters.firebaseStorageBucket >>}
+            export REACT_APP_FIREBASE_APP_ID=${<< parameters.firebaseAppId >>}
+            export REACT_APP_DOWNLOAD_EXPORT_FUNCTION_URL=${<< parameters.downloadExportUrl >>}
+            CI=false npm run build
+      - run: sudo npm install -g firebase-tools
+      - run: firebase target:apply hosting analytics ${<< parameters.analyticsHostedUrl >>} -P ${<< parameters.firebaseProjectID >>} --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase deploy -P ${<< parameters.firebaseProjectId >>} --only hosting:analytics --token ${<< parameters.firebaseDeployToken >>}
+
 workflows:
   version: 2
   build_deploy:
     jobs:
+      # Development Jobs
       - deploy_dialogflow_agent:
           jsonKey: DEV_MDHS_CSA_KEY_JSON
           env: dev
@@ -141,8 +191,6 @@ workflows:
               only:
                 - development
       - deploy_functions:
-          jsonKey: DEV_MDHS_CSA_KEY_JSON
-          env: dev
           firebaseProjectID: DEV_FIREBASE_PROJECT_ID
           googleMapsKey: DEV_GOOGLE_MAPS_KEY
           serviceDeskKey: DEV_SERVICE_DESK_KEY
@@ -154,7 +202,7 @@ workflows:
             branches:
               only:
                 - development
-      - deploy_hosting:
+      - deploy_hosting_test_harness:
           firebaseProjectID: DEV_FIREBASE_PROJECT_ID
           googleMapsKey: DEV_GOOGLE_MAPS_KEY
           eventUrl: https://us-central1-mdhs-csa-dev.cloudfunctions.net/eventRequest
@@ -164,6 +212,21 @@ workflows:
             branches:
               only:
                 - development
+      - deploy_hosting_analytics:
+          firebaseProjectId: DEV_FIREBASE_PROJECT_ID
+          firebaseApiKey: DEV_FIREBASE_API_KEY
+          firebaseAuthDomain: DEV_FIREBASE_AUTH_DOMAIN
+          firebaseDatabaseUrl: DEV_FIREBASE_DATABASE_URL
+          firebaseDeployToken: DEV_FIREBASE_DEPLOY_TOKEN
+          firebaseMessagingSenderId: DEV_FIREBASE_MESSAGING_SENDER_ID
+          firebaseStorageBucket: DEV_FIREBASE_STORAGE_BUCKET
+          firebaseAppId: DEV_FIREBASE_APP_ID
+          downloadExportUrl: DEV_DOWNLOAD_EXPORT_FUNCTION_URL
+          filters:
+            branches:
+              only:
+                - development
+      # ISD Jobs
       - deploy_dialogflow_agent:
           jsonKey: ISD_MDHS_CSA_KEY_JSON
           env: isd
@@ -172,8 +235,6 @@ workflows:
               only:
                 - isd
       - deploy_functions:
-          jsonKey: ISD_MDHS_CSA_KEY_JSON
-          env: isd
           firebaseProjectID: ISD_FIREBASE_PROJECT_ID
           googleMapsKey: STAGE_GOOGLE_MAPS_KEY
           serviceDeskKey: DEV_SERVICE_DESK_KEY
@@ -185,7 +246,7 @@ workflows:
             branches:
               only:
                 - isd
-      - deploy_hosting:
+      - deploy_hosting_test_harness:
           firebaseProjectID: ISD_FIREBASE_PROJECT_ID
           googleMapsKey: STAGE_GOOGLE_MAPS_KEY
           eventUrl: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/eventRequest
@@ -195,6 +256,21 @@ workflows:
             branches:
               only:
                 - isd
+      - deploy_hosting_analytics:
+          firebaseProjectId: ISD_FIREBASE_PROJECT_ID
+          firebaseApiKey: ISD_FIREBASE_API_KEY
+          firebaseAuthDomain: ISD_FIREBASE_AUTH_DOMAIN
+          firebaseDatabaseUrl: ISD_FIREBASE_DATABASE_URL
+          firebaseDeployToken: ISD_FIREBASE_DEPLOY_TOKEN
+          firebaseMessagingSenderId: ISD_FIREBASE_MESSAGING_SENDER_ID
+          firebaseStorageBucket: ISD_FIREBASE_STORAGE_BUCKET
+          firebaseAppId: ISD_FIREBASE_APP_ID
+          downloadExportUrl: ISD_DOWNLOAD_EXPORT_FUNCTION_URL
+          filters:
+            branches:
+              only:
+                - development
+      # Stage Jobs
       - deploy_dialogflow_agent:
           jsonKey: STAGE_MDHS_CSA_KEY_JSON
           env: stage
@@ -203,8 +279,6 @@ workflows:
               only:
                 - stage
       - deploy_functions:
-          jsonKey: STAGE_MDHS_CSA_KEY_JSON
-          env: stage
           firebaseProjectID: STAGE_FIREBASE_PROJECT_ID
           googleMapsKey: STAGE_GOOGLE_MAPS_KEY
           serviceDeskKey: STAGE_SERVICE_DESK_KEY
@@ -216,7 +290,7 @@ workflows:
             branches:
               only:
                 - stage
-      - deploy_hosting:
+      - deploy_hosting_test_harness:
           firebaseProjectID: STAGE_FIREBASE_PROJECT_ID
           googleMapsKey: STAGE_GOOGLE_MAPS_KEY
           eventUrl: https://us-central1-mdhs-csa-stage.cloudfunctions.net/eventRequest
@@ -226,6 +300,21 @@ workflows:
             branches:
               only:
                 - stage
+      - deploy_hosting_analytics:
+          firebaseProjectId: STAGE_FIREBASE_PROJECT_ID
+          firebaseApiKey: STAGE_FIREBASE_API_KEY
+          firebaseAuthDomain: STAGE_FIREBASE_AUTH_DOMAIN
+          firebaseDatabaseUrl: STAGE_FIREBASE_DATABASE_URL
+          firebaseDeployToken: STAGE_FIREBASE_DEPLOY_TOKEN
+          firebaseMessagingSenderId: STAGE_FIREBASE_MESSAGING_SENDER_ID
+          firebaseStorageBucket: STAGE_FIREBASE_STORAGE_BUCKET
+          firebaseAppId: STAGE_FIREBASE_APP_ID
+          downloadExportUrl: STAGE_DOWNLOAD_EXPORT_FUNCTION_URL
+          filters:
+            branches:
+              only:
+                - stage
+      # Production Jobs
       - deploy_dialogflow_agent:
           jsonKey: PROD_MDHS_CSA_KEY_JSON
           env: prod
@@ -234,8 +323,6 @@ workflows:
               only:
                 - master
       - deploy_functions:
-          jsonKey: PROD_MDHS_CSA_KEY_JSON
-          env: prod
           firebaseProjectID: PROD_FIREBASE_PROJECT_ID
           googleMapsKey: PROD_GOOGLE_MAPS_KEY
           serviceDeskKey: PROD_SERVICE_DESK_KEY
@@ -247,15 +334,19 @@ workflows:
             branches:
               only:
                 - master
-      - deploy_hosting:
-          firebaseProjectID: PROD_FIREBASE_PROJECT_ID
-          googleMapsKey: PROD_GOOGLE_MAPS_KEY
-          eventUrl: https://us-central1-mdhs-csa.cloudfunctions.net/eventRequest
-          textUrl: https://us-central1-mdhs-csa.cloudfunctions.net/textRequest
-          feedbackURL: https://us-central1-mdhs-csa.cloudfunctions.net/storeFeedback
+      # We do NOT deploy the test harness hosting project for the master branch
+      # a wordpress site and requires gen to be implemented via a plug in.
+      - deploy_hosting_analytics:
+          firebaseProjectId: PROD_FIREBASE_PROJECT_ID
+          firebaseApiKey: PROD_FIREBASE_API_KEY
+          firebaseAuthDomain: PROD_FIREBASE_AUTH_DOMAIN
+          firebaseDatabaseUrl: PROD_FIREBASE_DATABASE_URL
+          firebaseDeployToken: PROD_FIREBASE_DEPLOY_TOKEN
+          firebaseMessagingSenderId: PROD_FIREBASE_MESSAGING_SENDER_ID
+          firebaseStorageBucket: PROD_FIREBASE_STORAGE_BUCKET
+          firebaseAppId: PROD_FIREBASE_APP_ID
+          downloadExportUrl: PROD_DOWNLOAD_EXPORT_FUNCTION_URL
           filters:
             branches:
               only:
-                - stage
-      # We do NOT deploy hosting for the master branch because the prod site is
-      # a wordpress site and requires gen to be implemented via a plug in.
+                - master
