--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,8 @@ jobs:
             SERVICE_DESK_ENV=${<< parameters.serviceDeskEnv >>}" > .env
 
       - run: sudo npm install -g firebase-tools
-      - run: firebase deploy -P ${<< parameters.firebaseProjectID >>} --only functions --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase use ${<< parameters.firebaseProjectID >>} --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase deploy --only functions --token $FIREBASE_DEPLOY_TOKEN
 
   deploy_hosting_test_harness:
     docker:
@@ -124,8 +125,9 @@ jobs:
           name: "Add env variables to interface folder"
           command: cd interface && npm run build
       - run: sudo npm install -g firebase-tools
-      - run: firebase target:apply hosting testHarness ${<< parameters.testHarnessHostedUrl >>} -P ${<< parameters.firebaseProjectID >>} --token $FIREBASE_DEPLOY_TOKEN
-      - run: firebase deploy -P ${<< parameters.firebaseProjectID >>} --only hosting:testHarness --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase use ${<< parameters.firebaseProjectID >>} --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase target:apply hosting testHarness ${<< parameters.testHarnessHostedUrl >>} --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase deploy --only hosting:testHarness --token $FIREBASE_DEPLOY_TOKEN
 
   deploy_hosting_analytics:
     docker:
@@ -139,8 +141,6 @@ jobs:
       firebaseAuthDomain:
         type: string
       firebaseDatabaseUrl:
-        type: string
-      firebaseDeployToken:
         type: string
       firebaseMessagingSenderId:
         type: string
@@ -175,8 +175,9 @@ jobs:
             export REACT_APP_DOWNLOAD_EXPORT_FUNCTION_URL=${<< parameters.downloadExportUrl >>}
             CI=false npm run build
       - run: sudo npm install -g firebase-tools
-      - run: firebase target:apply hosting analytics ${<< parameters.analyticsHostedUrl >>} -P ${<< parameters.firebaseProjectID >>} --token $FIREBASE_DEPLOY_TOKEN
-      - run: firebase deploy -P ${<< parameters.firebaseProjectId >>} --only hosting:analytics --token ${<< parameters.firebaseDeployToken >>}
+      - run: firebase use ${<< parameters.firebaseProjectID >>} --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase target:apply hosting analytics ${<< parameters.analyticsHostedUrl >>} --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase deploy --only hosting:analytics --token $FIREBASE_DEPLOY_TOKEN
 
 workflows:
   version: 2
@@ -191,37 +192,38 @@ workflows:
               only:
                 - development
       - deploy_functions:
-          firebaseProjectID: DEV_FIREBASE_PROJECT_ID
-          googleMapsKey: DEV_GOOGLE_MAPS_KEY
+          firebaseProjectID: mdhs-csa-dev
+          googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
           serviceDeskKey: DEV_SERVICE_DESK_KEY
-          serviceDeskURI: DEV_SERVICE_DESK_URI
-          serviceDeskID: DEV_SERVICE_DESK_ID
-          requestTypeID: DEV_REQUEST_TYPE_ID
-          serviceDeskEnv: DEV_SERVICE_DESK_ENV
+          serviceDeskURI: https://msdhs.atlassian.net/rest/servicedeskapi/request
+          serviceDeskID: 7
+          requestTypeID: 75
+          serviceDeskEnv: Test
           filters:
             branches:
               only:
                 - development
       - deploy_hosting_test_harness:
-          firebaseProjectID: DEV_FIREBASE_PROJECT_ID
-          googleMapsKey: DEV_GOOGLE_MAPS_KEY
+          firebaseProjectID: mdhs-csa-dev
+          googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
           eventUrl: https://us-central1-mdhs-csa-dev.cloudfunctions.net/eventRequest
           textUrl: https://us-central1-mdhs-csa-dev.cloudfunctions.net/textRequest
           feedbackURL: https://us-central1-mdhs-csa-dev.cloudfunctions.net/storeFeedback
+          testHarnessHostedUrl: tbd
           filters:
             branches:
               only:
                 - development
       - deploy_hosting_analytics:
-          firebaseProjectId: DEV_FIREBASE_PROJECT_ID
-          firebaseApiKey: DEV_FIREBASE_API_KEY
-          firebaseAuthDomain: DEV_FIREBASE_AUTH_DOMAIN
-          firebaseDatabaseUrl: DEV_FIREBASE_DATABASE_URL
-          firebaseDeployToken: DEV_FIREBASE_DEPLOY_TOKEN
-          firebaseMessagingSenderId: DEV_FIREBASE_MESSAGING_SENDER_ID
-          firebaseStorageBucket: DEV_FIREBASE_STORAGE_BUCKET
-          firebaseAppId: DEV_FIREBASE_APP_ID
-          downloadExportUrl: DEV_DOWNLOAD_EXPORT_FUNCTION_URL
+          firebaseProjectId: mdhs-csa-dev
+          firebaseApiKey: AIzaSyDGkhs6juNsvEBN6c1aNpbGIPcZhB2dImM # Not a secret
+          firebaseAuthDomain: mdhs-csa-dev.firebaseapp.com
+          firebaseDatabaseUrl: https://mdhs-csa-dev.firebaseio.com
+          firebaseStorageBucket: mdhs-csa-dev.appspot.com
+          firebaseMessagingSenderId: 390034944383
+          firebaseAppId: 1:390034944383:web:6cefab99af945d7876aa4a
+          downloadExportUrl: https://us-central1-mdhs-csa-dev.cloudfunctions.net/downloadExport
+          analyticsHostedUrl: tbd
           filters:
             branches:
               only:
@@ -235,41 +237,42 @@ workflows:
               only:
                 - isd
       - deploy_functions:
-          firebaseProjectID: ISD_FIREBASE_PROJECT_ID
-          googleMapsKey: STAGE_GOOGLE_MAPS_KEY
+          firebaseProjectID: mdhs-csa-isd-273818
+          googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
           serviceDeskKey: DEV_SERVICE_DESK_KEY
-          serviceDeskURI: DEV_SERVICE_DESK_URI
-          serviceDeskID: DEV_SERVICE_DESK_ID
-          requestTypeID: DEV_REQUEST_TYPE_ID
-          serviceDeskEnv: DEV_SERVICE_DESK_ENV
+          serviceDeskURI: https://msdhs.atlassian.net/rest/servicedeskapi/request
+          serviceDeskID: 7
+          requestTypeID: 75
+          serviceDeskEnv: Test
           filters:
             branches:
               only:
                 - isd
       - deploy_hosting_test_harness:
-          firebaseProjectID: ISD_FIREBASE_PROJECT_ID
-          googleMapsKey: STAGE_GOOGLE_MAPS_KEY
+          firebaseProjectID: mdhs-csa-isd-273818
+          googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
           eventUrl: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/eventRequest
           textUrl: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/textRequest
           feedbackURL: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/storeFeedback
+          testHarnessHostedUrl: tbd
           filters:
             branches:
               only:
                 - isd
       - deploy_hosting_analytics:
-          firebaseProjectId: ISD_FIREBASE_PROJECT_ID
-          firebaseApiKey: ISD_FIREBASE_API_KEY
-          firebaseAuthDomain: ISD_FIREBASE_AUTH_DOMAIN
-          firebaseDatabaseUrl: ISD_FIREBASE_DATABASE_URL
-          firebaseDeployToken: ISD_FIREBASE_DEPLOY_TOKEN
-          firebaseMessagingSenderId: ISD_FIREBASE_MESSAGING_SENDER_ID
-          firebaseStorageBucket: ISD_FIREBASE_STORAGE_BUCKET
-          firebaseAppId: ISD_FIREBASE_APP_ID
-          downloadExportUrl: ISD_DOWNLOAD_EXPORT_FUNCTION_URL
+          firebaseProjectId: mdhs-csa-isd-273818
+          firebaseApiKey: AIzaSyAZecCjFe--9pJh2hIo6FADebDBHg7RK6M # Not a secret
+          firebaseAuthDomain: mdhs-csa-isd-273818.firebaseapp.com
+          firebaseDatabaseUrl: https://mdhs-csa-isd-273818.firebaseio.com
+          firebaseStorageBucket: mdhs-csa-isd-273818.appspot.com
+          firebaseMessagingSenderId: 982471055822
+          firebaseAppId: 1:982471055822:web:65ee3d09dd3e1e0822f39f
+          downloadExportUrl: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/downloadExport
+          analyticsHostedUrl: tbd
           filters:
             branches:
               only:
-                - development
+                - isd
       # Stage Jobs
       - deploy_dialogflow_agent:
           jsonKey: STAGE_MDHS_CSA_KEY_JSON
@@ -279,37 +282,38 @@ workflows:
               only:
                 - stage
       - deploy_functions:
-          firebaseProjectID: STAGE_FIREBASE_PROJECT_ID
-          googleMapsKey: STAGE_GOOGLE_MAPS_KEY
+          firebaseProjectID: mdhs-csa-stage
+          googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
           serviceDeskKey: STAGE_SERVICE_DESK_KEY
-          serviceDeskURI: STAGE_SERVICE_DESK_URI
-          serviceDeskID: STAGE_SERVICE_DESK_ID
-          requestTypeID: STAGE_REQUEST_TYPE_ID
-          serviceDeskEnv: STAGE_SERVICE_DESK_ENV
+          serviceDeskURI: https://msdhs.atlassian.net/rest/servicedeskapi/request
+          serviceDeskID: 7
+          requestTypeID: 75
+          serviceDeskEnv: Test
           filters:
             branches:
               only:
                 - stage
       - deploy_hosting_test_harness:
-          firebaseProjectID: STAGE_FIREBASE_PROJECT_ID
-          googleMapsKey: STAGE_GOOGLE_MAPS_KEY
+          firebaseProjectID: mdhs-csa-stage
+          googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
           eventUrl: https://us-central1-mdhs-csa-stage.cloudfunctions.net/eventRequest
           textUrl: https://us-central1-mdhs-csa-stage.cloudfunctions.net/textRequest
           feedbackURL: https://us-central1-mdhs-csa-stage.cloudfunctions.net/storeFeedback
+          testHarnessHostedUrl: tbd
           filters:
             branches:
               only:
                 - stage
       - deploy_hosting_analytics:
-          firebaseProjectId: STAGE_FIREBASE_PROJECT_ID
-          firebaseApiKey: STAGE_FIREBASE_API_KEY
-          firebaseAuthDomain: STAGE_FIREBASE_AUTH_DOMAIN
-          firebaseDatabaseUrl: STAGE_FIREBASE_DATABASE_URL
-          firebaseDeployToken: STAGE_FIREBASE_DEPLOY_TOKEN
-          firebaseMessagingSenderId: STAGE_FIREBASE_MESSAGING_SENDER_ID
-          firebaseStorageBucket: STAGE_FIREBASE_STORAGE_BUCKET
-          firebaseAppId: STAGE_FIREBASE_APP_ID
-          downloadExportUrl: STAGE_DOWNLOAD_EXPORT_FUNCTION_URL
+          firebaseProjectId: mdhs-csa-stage
+          firebaseApiKey: AIzaSyAXH0VmURgNJu21ueoep22rmgpe7dZozUU # Not a secret
+          firebaseAuthDomain: mdhs-csa-stage.firebaseapp.com
+          firebaseDatabaseUrl: https://mdhs-csa-stage.firebaseio.co
+          firebaseStorageBucket: mdhs-csa-stage.appspot.com
+          firebaseMessagingSenderId: 75224097502
+          firebaseAppId: 1:75224097502:web:43ecc962b205e01b37584f
+          downloadExportUrl: https://us-central1-mdhs-csa-stage.cloudfunctions.net/downloadExport
+          analyticsHostedUrl: tbd
           filters:
             branches:
               only:
@@ -323,13 +327,13 @@ workflows:
               only:
                 - master
       - deploy_functions:
-          firebaseProjectID: PROD_FIREBASE_PROJECT_ID
-          googleMapsKey: PROD_GOOGLE_MAPS_KEY
+          firebaseProjectID: mdhs-csa
+          googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
           serviceDeskKey: PROD_SERVICE_DESK_KEY
-          serviceDeskURI: PROD_SERVICE_DESK_URI
-          serviceDeskID: PROD_SERVICE_DESK_ID
-          requestTypeID: PROD_REQUEST_TYPE_ID
-          serviceDeskEnv: PROD_SERVICE_DESK_ENV
+          serviceDeskURI: https://msdhs.atlassian.net/rest/servicedeskapi/request
+          serviceDeskID: 7
+          requestTypeID: 75
+          serviceDeskEnv: Production
           filters:
             branches:
               only:
@@ -337,15 +341,15 @@ workflows:
       # We do NOT deploy the test harness hosting project for the master branch
       # a wordpress site and requires gen to be implemented via a plug in.
       - deploy_hosting_analytics:
-          firebaseProjectId: PROD_FIREBASE_PROJECT_ID
-          firebaseApiKey: PROD_FIREBASE_API_KEY
-          firebaseAuthDomain: PROD_FIREBASE_AUTH_DOMAIN
-          firebaseDatabaseUrl: PROD_FIREBASE_DATABASE_URL
-          firebaseDeployToken: PROD_FIREBASE_DEPLOY_TOKEN
-          firebaseMessagingSenderId: PROD_FIREBASE_MESSAGING_SENDER_ID
-          firebaseStorageBucket: PROD_FIREBASE_STORAGE_BUCKET
-          firebaseAppId: PROD_FIREBASE_APP_ID
-          downloadExportUrl: PROD_DOWNLOAD_EXPORT_FUNCTION_URL
+          firebaseProjectId: mdhs-csa
+          firebaseApiKey: AIzaSyC1Kxwy-RmgB8k80i-xrcMVya_5uE2-sDM # Not a secret
+          firebaseAuthDomain: mdhs-csa.firebaseapp.com
+          firebaseDatabaseUrl: https://mdhs-csa.firebaseio.com
+          firebaseStorageBucket: mdhs-csa.appspot.com
+          firebaseMessagingSenderId: 804026557045
+          firebaseAppId: 1:804026557045:web:501111adde1bda8c87ce3c
+          downloadExportUrl: https://us-central1-mdhs-csa.cloudfunctions.net/downloadExport
+          analyticsHostedUrl: tbd
           filters:
             branches:
               only:
