--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,9 +48,9 @@ jobs:
       serviceDeskURI:
         type: string
       serviceDeskID:
-        type: string
+        type: integer
       requestTypeID:
-        type: string
+        type: integer
       serviceDeskEnv:
         type: string
     steps:
@@ -143,7 +143,7 @@ jobs:
       firebaseDatabaseUrl:
         type: string
       firebaseMessagingSenderId:
-        type: string
+        type: integer
       firebaseStorageBucket:
         type: string
       firebaseAppId:
