--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
       - image: circleci/node
     working_directory: ~/repo/
     parameters:
-      firebaseProjectID:
+      firebaseProjectId:
         type: string # e.g. mdhs-csa-dev, mdhs-csa-isd-273818
       googleMapsKey:
         type: string
@@ -78,7 +78,7 @@ jobs:
             SERVICE_DESK_ENV=${<< parameters.serviceDeskEnv >>}" > .env
 
       - run: sudo npm install -g firebase-tools
-      - run: firebase use ${<< parameters.firebaseProjectID >>} --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase use ${<< parameters.firebaseProjectId >>} --token $FIREBASE_DEPLOY_TOKEN
       - run: firebase deploy --only functions --token $FIREBASE_DEPLOY_TOKEN
 
   deploy_hosting_test_harness:
@@ -86,7 +86,7 @@ jobs:
       - image: circleci/node:12.16.1
     working_directory: ~/repo/
     parameters:
-      firebaseProjectID:
+      firebaseProjectId:
         type: string # e.g. mdhs-csa-dev, mdhs-csa-isd-273818
       googleMapsKey:
         type: string
@@ -125,7 +125,7 @@ jobs:
           name: "Add env variables to interface folder"
           command: cd interface && npm run build
       - run: sudo npm install -g firebase-tools
-      - run: firebase use ${<< parameters.firebaseProjectID >>} --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase use ${<< parameters.firebaseProjectId >>} --token $FIREBASE_DEPLOY_TOKEN
       - run: firebase target:apply hosting testHarness ${<< parameters.testHarnessHostedUrl >>} --token $FIREBASE_DEPLOY_TOKEN
       - run: firebase deploy --only hosting:testHarness --token $FIREBASE_DEPLOY_TOKEN
 
@@ -175,7 +175,7 @@ jobs:
             export REACT_APP_DOWNLOAD_EXPORT_FUNCTION_URL=${<< parameters.downloadExportUrl >>}
             CI=false npm run build
       - run: sudo npm install -g firebase-tools
-      - run: firebase use ${<< parameters.firebaseProjectID >>} --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase use ${<< parameters.firebaseProjectId >>} --token $FIREBASE_DEPLOY_TOKEN
       - run: firebase target:apply hosting analytics ${<< parameters.analyticsHostedUrl >>} --token $FIREBASE_DEPLOY_TOKEN
       - run: firebase deploy --only hosting:analytics --token $FIREBASE_DEPLOY_TOKEN
 
@@ -192,7 +192,7 @@ workflows:
               only:
                 - development
       - deploy_functions:
-          firebaseProjectID: mdhs-csa-dev
+          firebaseProjectId: mdhs-csa-dev
           googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
           serviceDeskKey: DEV_SERVICE_DESK_KEY
           serviceDeskURI: https://msdhs.atlassian.net/rest/servicedeskapi/request
@@ -204,7 +204,7 @@ workflows:
               only:
                 - development
       - deploy_hosting_test_harness:
-          firebaseProjectID: mdhs-csa-dev
+          firebaseProjectId: mdhs-csa-dev
           googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
           eventUrl: https://us-central1-mdhs-csa-dev.cloudfunctions.net/eventRequest
           textUrl: https://us-central1-mdhs-csa-dev.cloudfunctions.net/textRequest
@@ -237,7 +237,7 @@ workflows:
               only:
                 - isd
       - deploy_functions:
-          firebaseProjectID: mdhs-csa-isd-273818
+          firebaseProjectId: mdhs-csa-isd-273818
           googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
           serviceDeskKey: DEV_SERVICE_DESK_KEY
           serviceDeskURI: https://msdhs.atlassian.net/rest/servicedeskapi/request
@@ -249,7 +249,7 @@ workflows:
               only:
                 - isd
       - deploy_hosting_test_harness:
-          firebaseProjectID: mdhs-csa-isd-273818
+          firebaseProjectId: mdhs-csa-isd-273818
           googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
           eventUrl: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/eventRequest
           textUrl: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/textRequest
@@ -282,7 +282,7 @@ workflows:
               only:
                 - stage
       - deploy_functions:
-          firebaseProjectID: mdhs-csa-stage
+          firebaseProjectId: mdhs-csa-stage
           googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
           serviceDeskKey: STAGE_SERVICE_DESK_KEY
           serviceDeskURI: https://msdhs.atlassian.net/rest/servicedeskapi/request
@@ -294,7 +294,7 @@ workflows:
               only:
                 - stage
       - deploy_hosting_test_harness:
-          firebaseProjectID: mdhs-csa-stage
+          firebaseProjectId: mdhs-csa-stage
           googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
           eventUrl: https://us-central1-mdhs-csa-stage.cloudfunctions.net/eventRequest
           textUrl: https://us-central1-mdhs-csa-stage.cloudfunctions.net/textRequest
@@ -327,7 +327,7 @@ workflows:
               only:
                 - master
       - deploy_functions:
-          firebaseProjectID: mdhs-csa
+          firebaseProjectId: mdhs-csa
           googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
           serviceDeskKey: PROD_SERVICE_DESK_KEY
           serviceDeskURI: https://msdhs.atlassian.net/rest/servicedeskapi/request
