--- a/functions/package.json
+++ b/functions/package.json
@@ -22,9 +22,12 @@
   },
   "dependencies": {
     "@google-cloud/automl": "^1.7.3",
+    "@google-cloud/storage": "^5.1.2",
+    "@types/date-fns": "^2.6.0",
     "actions-on-google": "^2.12.0",
     "camelcase": "^5.3.1",
     "cors": "^2.8.5",
+    "date-fns": "^1.30.1",
     "dialogflow": "^0.9.1",
     "dialogflow-fulfillment": "github:dialogflow/dialogflow-fulfillment-nodejs",
     "dotenv": "^8.0.0",
