--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,9 +125,7 @@ jobs:
           name: "Add env variables to interface folder"
           command: cd interface && npm run build
       - run: sudo npm install -g firebase-tools
-      - run: firebase use ${<< parameters.firebaseProjectId >>} --token $FIREBASE_DEPLOY_TOKEN
-      - run: firebase target:apply hosting testHarness ${<< parameters.testHarnessHostedUrl >>} --token $FIREBASE_DEPLOY_TOKEN
-      - run: firebase deploy --only hosting:testHarness --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase deploy --only hosting:testHarness --token $FIREBASE_DEPLOY_TOKEN -P ${<< parameters.firebaseProjectId >>}
 
   deploy_hosting_analytics:
     docker:
@@ -175,9 +173,7 @@ jobs:
             export REACT_APP_DOWNLOAD_EXPORT_FUNCTION_URL=${<< parameters.downloadExportUrl >>}
             CI=false npm run build
       - run: sudo npm install -g firebase-tools
-      - run: firebase use ${<< parameters.firebaseProjectId >>} --token $FIREBASE_DEPLOY_TOKEN
-      - run: firebase target:apply hosting analytics ${<< parameters.analyticsHostedUrl >>} --token $FIREBASE_DEPLOY_TOKEN
-      - run: firebase deploy --only hosting:analytics --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase deploy --only hosting:analytics --token $FIREBASE_DEPLOY_TOKEN -P ${<< parameters.firebaseProjectId >>}
 
 workflows:
   version: 2
