--- a/.firebaserc
+++ b/.firebaserc
@@ -6,5 +6,17 @@
     "dev-beta": "mdhs-csa-dev-beta",
     "isd": "mdhs-csa-isd-273818",
     "default": "mdhs-csa-dev"
+  },
+  "targets": {
+    "mdhs-csa-dev": {
+      "hosting": {
+        "analytics": [
+          "mdhs-csa-dev-analytics"
+        ],
+        "testHarness": [
+          "mdhs-csa-dev-test-harness"
+        ]
+      }
+    }
   }
 }
