--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,8 +78,7 @@ jobs:
             SERVICE_DESK_ENV=${<< parameters.serviceDeskEnv >>}" > .env
 
       - run: sudo npm install -g firebase-tools
-      - run: firebase use ${<< parameters.firebaseProjectId >>} --token $FIREBASE_DEPLOY_TOKEN
-      - run: firebase deploy --only functions --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase deploy --only functions --token $FIREBASE_DEPLOY_TOKEN -P ${<< parameters.firebaseProjectId >>}
 
   deploy_hosting_test_harness:
     docker:
@@ -102,17 +101,17 @@ jobs:
       - checkout
       - run:
           name: "Add npmrc to interface folder"
-          command: cd interface && echo "${ALL_NPM_AUTH_TOKEN}" > .npmrc
+          command: cd interface/testHarness && echo "${ALL_NPM_AUTH_TOKEN}" > .npmrc
       - restore_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
-      - run: cd interface && npm install
+      - run: cd interface/testHarness && npm install
       - save_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - interface/node_modules
       - run:
           name: "Add env variables to interface folder"
-          command: cd interface && echo
+          command: cd interface/testHarness && echo
             "REACT_APP_GOOGLE_MAPS_KEY=${<< parameters.googleMapsKey >>}
 
             REACT_APP_EVENT_URL=<< parameters.eventUrl >>
@@ -123,7 +122,7 @@ jobs:
 
       - run:
           name: "Add env variables to interface folder"
-          command: cd interface && npm run build
+          command: cd interface/testHarness && npm run build
       - run: sudo npm install -g firebase-tools
       - run: firebase deploy --only hosting:testHarness --token $FIREBASE_DEPLOY_TOKEN -P ${<< parameters.firebaseProjectId >>}
 
@@ -154,7 +153,7 @@ jobs:
       - checkout
       - restore_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
-      - run: npm install
+      - run: cd interface/analytics && npm install
       - save_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
@@ -163,6 +162,7 @@ jobs:
       - run:
           name: "Add env variables & build"
           command: |
+            cd interface/analytics  
             export REACT_APP_FIREBASE_API_KEY=${<< parameters.firebaseApiKey >>}
             export REACT_APP_FIREBASE_AUTH_DOMAIN=${<< parameters.firebaseAuthDomain >>}
             export REACT_APP_FIREBASE_DATABASE_URL=${<< parameters.firebaseDatabaseUrl >>}
