--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,18 +100,18 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "Add npmrc to interface folder"
-          command: cd interface/testHarness && echo "${ALL_NPM_AUTH_TOKEN}" > .npmrc
+          name: "Add npmrc to hosting folder"
+          command: cd hosting/testHarness && echo "${ALL_NPM_AUTH_TOKEN}" > .npmrc
       - restore_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
-      - run: cd interface/testHarness && npm install
+      - run: cd hosting/testHarness && npm install
       - save_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
-            - interface/node_modules
+            - hosting/node_modules
       - run:
-          name: "Add env variables to interface folder"
-          command: cd interface/testHarness && echo
+          name: "Add env variables to hosting folder"
+          command: cd hosting/testHarness && echo
             "REACT_APP_GOOGLE_MAPS_KEY=<< parameters.googleMapsKey >>
 
             REACT_APP_EVENT_URL=<< parameters.eventUrl >>
@@ -121,8 +121,8 @@ jobs:
             REACT_APP_FEEDBACK_URL=<< parameters.feedbackURL >>" > .env
 
       - run:
-          name: "Add env variables to interface folder"
-          command: cd interface/testHarness && npm run build
+          name: "Add env variables to hosting folder"
+          command: cd hosting/testHarness && npm run build
       - run: sudo npm install -g firebase-tools
       - run: firebase deploy --only hosting:testHarness --token $FIREBASE_DEPLOY_TOKEN -P << parameters.firebaseProjectId >>
 
@@ -153,7 +153,7 @@ jobs:
       - checkout
       - restore_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
-      - run: cd interface/analytics && npm install
+      - run: cd hosting/analytics && npm install
       - save_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
@@ -162,7 +162,7 @@ jobs:
       - run:
           name: "Add env variables & build"
           command: |
-            cd interface/analytics  
+            cd hosting/analytics  
             export REACT_APP_FIREBASE_API_KEY=<< parameters.firebaseApiKey >>
             export REACT_APP_FIREBASE_AUTH_DOMAIN=<< parameters.firebaseAuthDomain >>
             export REACT_APP_FIREBASE_DATABASE_URL=<< parameters.firebaseDatabaseUrl >>
