--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
             SERVICE_DESK_ENV=<< parameters.serviceDeskEnv >>" > .env
 
       - run: sudo npm install -g firebase-tools
-      - run: firebase deploy --only functions --token $FIREBASE_DEPLOY_TOKEN -P << parameters.firebaseProjectId >>
+      - run: firebase deploy --only functions,firestore --token $FIREBASE_DEPLOY_TOKEN -P << parameters.firebaseProjectId >>
 
   deploy_hosting_test_harness:
     docker:
