--- a/functions/package.json
+++ b/functions/package.json
@@ -6,7 +6,7 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "emulator-dev": "firebase emulators:start --only functions --project dev",
-    "emulator-dev-debug": "firebase emulators:start --inspect-functions",
+    "emulator-dev-debug": "firebase emulators:start --inspect-functions --only functions --project dev",
     "deploy": "firebase deploy --only functions",
     "deploy-dev": "firebase deploy --only functions --project dev",
     "deploy-dev-beta": "firebase deploy --only functions --project dev-beta",
