--- a/e2e/package.json
+++ b/e2e/package.json
@@ -12,6 +12,7 @@
     "dialogflow": "^0.12.2",
     "dotenv": "^6.2.0",
     "firebase-admin": "^8.12.1",
+    "request": "^2.88.2",
     "uuid": "^8.0.0",
     "xlsx": "^0.16.6"
   },
