--- a/functions/package.json
+++ b/functions/package.json
@@ -42,6 +42,7 @@
     "parse-address": "^1.1.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "sanitize-html": "^1.27.3",
     "validator": "^11.0.0"
   },
   "private": true,
